[package]
name = "server_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio         = { version = "1", features = ["full"] }
openssl       = "0.10"
tokio-openssl = "0.6"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
anyhow        = "1.0"

[build-dependencies]
cc = "1.0"